--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "salient-child",
+  "name": "BFL-Salient-Theme",
   "version": "1.0.0",
   "description": "WP child theme product. Improves A11y.",
   "main": "index.php",
