Fix theme rename

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "BFL-Salient-Theme",
+  "name": "bfl-salient-theme",
   "version": "1.0.0",
   "description": "WP child theme product. Improves A11y.",
   "main": "index.php",
