--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "watch-poll": "mix watch -- --watch-options-poll=1000",
     "hot": "mix watch --hot",
     "prod": "npm run production",
-    "production": "mix --production"
+    "production": "mix --production",
+    "pack": "npm-pack-zip"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
@@ -31,6 +32,7 @@
     "copy-webpack-plugin": "^11.0.0",
     "laravel-mix": "^6.0.49",
     "laravel-mix-purgecss": "^6.0.0",
+    "npm-pack-zip": "^1.3.0",
     "postcss": "^8.4.21",
     "postcss-cli": "^10.1.0",
     "postcss-custom-properties": "^13.1.4",
