--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "prettier": "^2.8.7",
     "resolve-url-loader": "^5.0.0",
     "sass": "^1.60.0",
-    "sass-loader": "^13.2.2"
+    "sass-loader": "^13.2.2",
+    "webpack": "^5.89.0"
   }
 }
